# manuals_linter

./: .gitignore  README.md
src/: CMakeLists.txt  Linker.py  main.cpp  main.h  main.py  personal_outline.cpp  personal_outline.h  scraper.py
src/non utili/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.py  personal_outline.cpp  personal_outline.h
